[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Objects/Circuit/VoltageDivider.png" type="Texture" id=1]
[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Objects/Circuit/plus.png" type="Texture" id=3]
[ext_resource path="res://Resources/Objects/Circuit/minus.png" type="Texture" id=4]
[ext_resource path="res://Resources/Puzzles/Chapter III/VoltageDivider/VoltageDivider.gd" type="Script" id=5]
[ext_resource path="res://Resources/Objects/PuzzleGraphics/HubUi.png" type="Texture" id=6]

[node name="VoltageDivider" instance=ExtResource( 2 )]
script = ExtResource( 5 )

[node name="Background" parent="." index="0"]
color = Color( 0.447059, 0.447059, 0.447059, 1 )

[node name="Sprite2" type="Sprite" parent="." index="2"]
position = Vector2( 159.544, 89.809 )
scale = Vector2( 0.459796, 0.459796 )
texture = ExtResource( 6 )

[node name="InstructionLabel" type="Label" parent="." index="3"]
margin_left = 47.6147
margin_top = 34.9903
margin_right = 215.615
margin_bottom = 48.9903
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="4"]
margin_left = 233.35
margin_top = 112.264
margin_right = 273.35
margin_bottom = 126.264
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltageValue" type="Label" parent="." index="5"]
margin_left = 249.446
margin_top = 83.3718
margin_right = 276.446
margin_bottom = 97.3718
text = "Vo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltageValue2" type="Label" parent="." index="6"]
margin_left = 157.666
margin_top = 109.458
margin_right = 184.666
margin_bottom = 191.458
rect_scale = Vector2( 0.7, 0.7 )
text = "+
Vo
_"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="." index="7"]
margin_left = 230.083
margin_top = 133.005
margin_right = 287.083
margin_bottom = 153.005
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltageUp" type="Button" parent="." index="8"]
margin_left = 218.796
margin_top = 78.9784
margin_right = 246.796
margin_bottom = 100.979
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltageDown" type="Button" parent="." index="9"]
margin_left = 268.057
margin_top = 77.7767
margin_right = 296.057
margin_bottom = 99.7767
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="." index="10"]
position = Vector2( 107.129, 103.381 )
scale = Vector2( 0.20196, 0.20196 )
texture = ExtResource( 1 )
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="VoltageUp" to="." method="_on_VoltageUp_pressed"]
[connection signal="pressed" from="VoltageDown" to="." method="_on_VoltageDown_pressed"]
